--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,18 +1,19 @@
 html {
-  -ms-touch-action: none;
+    -ms-touch-action: none;
+    touch-action:none
 }
 
 body, canvas, div {
-  display: block;
-  outline: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    display: block;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -khtml-user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 /* Remove spin of input type number */
@@ -24,71 +25,71 @@ input::-webkit-inner-spin-button {
 }
 
 body {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  border: 0;
-  margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    border: 0;
+    margin: 0;
 
-  cursor: default;
-  color: #888;
-  background-color: #333;
+    cursor: default;
+    color: #888;
+    background-color: #333;
 
-  text-align: center;
-  font-family: Helvetica, Verdana, Arial, sans-serif;
+    text-align: center;
+    font-family: Helvetica, Verdana, Arial, sans-serif;
 
-  display: flex;
-  flex-direction: column;
-  
-  /* fix bug: https://github.com/cocos-creator/2d-tasks/issues/791 */
-  /* overflow cannot be applied in Cocos2dGameContainer, 
-  otherwise child elements will be hidden when Cocos2dGameContainer rotated 90 deg */
-  overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    /* fix bug: https://github.com/cocos-creator/2d-tasks/issues/791 */
+    /* overflow cannot be applied in Cocos2dGameContainer, 
+    otherwise child elements will be hidden when Cocos2dGameContainer rotated 90 deg */
+    overflow: hidden;
 }
 
 #Cocos2dGameContainer {
-  position: absolute;
-  margin: 0;
-  left: 0px;
-  top: 0px;
+    position: absolute;
+    margin: 0;
+    left: 0px;
+    top: 0px;
 
-  display: -webkit-box;
-  -webkit-box-orient: horizontal;
-  -webkit-box-align: center;
-  -webkit-box-pack: center;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
 }
 
 canvas {
-  background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 a:link, a:visited {
-  color: #666;
+    color: #666;
 }
 
 a:active, a:hover {
-  color: #666;
+    color: #666;
 }
 
 p.header {
-  font-size: small;
+    font-size: small;
 }
 
 p.footer {
-  font-size: x-small;
+    font-size: x-small;
 }
 
 #splash {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffffff url(./singleColor.png) no-repeat center;
-  background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff url(./singleColor.png) no-repeat center;
+    background-size: 100%;
 }
 
 .progress-bar {
@@ -118,7 +119,7 @@ p.footer {
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
                         transparent 75%, transparent);            
-    
+
     animation: animate-stripes 1s linear infinite;             
 }
 
